# MyExtension

./: CMakeLists.txt
MyCLIModule/: CMakeLists.txt  MyCLIModule.cxx  MyCLIModule.xml
MyEditorEffect/: CMakeLists.txt  MyEditorEffect.py
MyLoadableModule/: CMakeLists.txt  qSlicerMyLoadableModuleModule.cxx  qSlicerMyLoadableModuleModule.h  qSlicerMyLoadableModuleModuleWidget.cxx  qSlicerMyLoadableModuleModuleWidget.h
MyLoadableModule/Logic/: vtkSlicerMyLoadableModuleLogic.cxx  vtkSlicerMyLoadableModuleLogic.h
MyLoadableModule/Resources/: qSlicerMyLoadableModuleModule.qrc
MyLoadableModule/Resources/UI/: qSlicerMyLoadableModuleFooBarWidget.ui  qSlicerMyLoadableModuleModuleWidget.ui
MyLoadableModule/Widgets/: qSlicerMyLoadableModuleFooBarWidget.cxx  qSlicerMyLoadableModuleFooBarWidget.h
MyScriptedModule/: CMakeLists.txt  MyScriptedModule.py
